# ani-download

./: CMakeLists.txt  README.md  install.sh
docs/: cores.md  json.md  requests.md
docs/guides/: cores.md
docs/lua/: html.md  ui.md
lua/cores/: nyaa.lua
lua/modules/: config.lua  qbit.lua
src/: args.c  args.h  main.cpp
src/lua/: json.cpp  json.h  parser.cpp  parser.h  request.cpp  request.h  ui.cpp  ui.h
